# daladala-live

./: README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 06c473d2db8b_vehicles.py  2c9a9c7b2c2a_add_route_geometry.py  2e37c0074375_add_vehicles_and_vehicles_users_tables.py  3f4b9a2c1d7e_add_vehicle_route_id.py  e165744a8b82_add_user_role.py
data/: edges.csv  join_to_linestring.py  morogoro-road-linestring.json  morogoro-road.json  route.geojson
src/daladala_live/auth/: router.py
src/daladala_live/core/: redis.py  security.py
src/daladala_live/nodes/: router.py  schemas.py  service.py
src/daladala_live/routes/: router.py
src/daladala_live/vehicles/: router.py  service.py  ws.py
src/volta_api/: main.py  utils.py
src/volta_api/auth/: dependencies.py  models.py  router.py
src/volta_api/core/: api_response.py  config.py  database.py  mail.py  mailer.py  redis.py  settings.py  websocket_manager.py
src/volta_api/nodes/: models.py  router.py  service.py
src/volta_api/routes/: models.py  router.py  schemas.py  service.py
src/volta_api/users/: models.py  router.py  schemas.py  service.py
src/volta_api/vehicles/: models.py  router.py  schemas.py  service.py  ws.py
src/ws/: ws.py
tests/: send-mail.py
